--- a/3004-Project/mainwindow.ui
+++ b/3004-Project/mainwindow.ui
@@ -791,6 +791,19 @@
      </property>
     </item>
    </widget>
+   <widget class="QGraphicsView" name="display">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>90</y>
+      <width>401</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 87, 83);</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
